<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:orientation="vertical"
    tools:context=".Login">
    <TextView
        android:id="@+id/LoginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_form"
        android:textSize="30sp"
        android:gravity="top"
        android:maxLines="1"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/et_emailSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_login"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"/>
    <EditText
        android:id="@+id/et_passwordSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:imeActionId="6"
        android:imeActionLabel="Sign In"
        android:imeOptions="actionDone" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button

            android:id="@+id/button_signinSignin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/sign_in_bt_login"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:id="@+id/registerSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_sign"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:maxLines="1"
        android:singleLine="true"/>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_signupSignin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/sign_up_login"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>